# fluxion

./: CMakeLists.txt  run.sh  user-state.yaml
code/: fluxion.cc
code/interfaces/: CMakeLists.txt
code/interfaces/include/: state.hpp
code/moc_builder/: CMakeLists.txt
code/moc_builder/include/: layout.hpp  moc-builder.hpp  permitted-types.hpp
code/moc_builder/src/: layout.cc  moc-builder.cc
code/store/: CMakeLists.txt
code/store/include/: dispatch.hpp  reducer.hpp  slice.hpp  store.hpp
code/store/interfaces/: state.hpp
docker/: dockerfile
fluxion/: fluxion.cc
